# pytfy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: pytest.ini
src/pytfy/: __init__.py  ntfy_wrapper.py
src/tests/: conftest.py  test_general.py
