[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytfy"
version = "0.0.2"
authors = [
  { name="Diogo Valentim", email="diogovalentte10@gmail.com" },
]
description = "A simple client to wrap the Ntfy API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.32.3"
]

[project.urls]
"Homepage" = "https://github.com/diogovalentte/pytfy"
"Bug Tracker" = "https://github.com/diogovalentte/pytfy"
